@startuml
skinparam classAttributeIconSize 0
class ChildClass{
- flag : boolean
+ setFlag(flag : boolean) : void
+ getFlag() : boolean
}
ChildClass --|> TestClass
class StaticFinalTest{
+ {static} CONSTANT_VALUE : int
+ {static} staticMethod() : void
}
class GenericTestClass{
- genericAttribute : T
+ setGenericAttribute(genericAttribute : T) : void
+ getGenericAttribute() : T
}
class MultithreadingExample{
+ {static} main(args : String[]) : void
}
class Inner{
- innerAttribute : int
+ innerMethod() : void
}
class MyRunnable{
+ run() : void
}
MyRunnable ..|> Runnable
class TestClass{
- number : int
- text : String
+ setNumber(number : int) : void
+ getNumber() : int
+ setText(text : String) : void
+ getText() : String
+ printDetails() : void
}
class Outer{
- outerAttribute : int
}
class InterfaceImplementation{
+ interfaceMethod() : void
}
InterfaceImplementation ..|> TestInterface
class MyThread{
+ run() : void
}
MyThread --|> Thread
interface TestInterface{
interfaceMethod() : void
}
@enduml